--- a/src/examples/article/styles.scss
+++ b/src/examples/article/styles.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .chart-container {
   width: 100%;
   height: 25rem;
@@ -15,11 +19,15 @@ h1 {
 }
 
 .grid-article {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-flow: dense;
+  display: flex;
+  flex-wrap: wrap;
   max-width: 1400px;
   margin: 0 auto;
+}
+
+.col-1, .col-2, .col-3 {
+  width: 100%;
+  flex-grow: 1;
 }
 
 .article {
@@ -28,39 +36,18 @@ h1 {
   border-bottom: 1px solid #DADCE0;
 }
 
-@media (min-width: 750px) {
-  .grid-article {
-    grid-template-columns: minmax(450px, 1.5fr) repeat(auto-fit, minmax(300px, 1fr));
-  }
+@media (min-width: 700px) {
+  .col-1 { width: 60% }
+  .col-2 { width: 40% }
+  .col-3 { width: 100%}
 }
 
-.articles-col3 {
-  //grid-column: 1 / 3;
+@media (min-width: 1100px) {
+  .col-1 { width: 45% }
+  .col-2 { width: 27.5% }
+  .col-3 { width: 27.5%}
 }
 
 .chart {
   padding-top: 0;
-}
-
-.hao {
-
-}
-
-@media (max-width: 40rem) {
-  .chart {
-    grid-template: auto auto 1fr auto / auto 1fr;
-    grid-template-areas:
-            'header header'
-            '. legend'
-            'axis-left draw-area'
-            '. axis-bottom';
-  }
-
-  .legend .items {
-    flex-direction: row;
-  }
-
-  .axis-y .tick:nth-of-type(2n) {
-    display: none;
-  }
 }
