--- a/src/examples/article/electric-power-consumption.css
+++ b/src/examples/article/electric-power-consumption.css
@@ -9,31 +9,34 @@
 #electric-power-consumption .legend-item {
   margin-top: 1rem;
 }
-@media (max-width: 400px) {
-  #electric-power-consumption .point, #electric-power-consumption .axis {
-    display: none;
-  }
-  #electric-power-consumption .point:first-of-type, #electric-power-consumption .point:last-of-type {
-    display: block;
-  }
-}
 #electric-power-consumption .chart {
   grid-template: auto auto 1fr auto/auto 1fr auto;
   grid-template-areas: "header  header  header" "legend legend legend" "axis-left draw-area draw-area" " . axis-bottom . ";
 }
 #electric-power-consumption .legend {
   width: 100%;
+  margin-bottom: 1rem;
+  margin-left: 0.5rem;
 }
 #electric-power-consumption .legend .items {
   flex-direction: row;
   width: 100%;
   justify-content: space-evenly;
 }
-@media (min-width: 400px) {
+
+@media (min-width: 25em) {
   #electric-power-consumption .point, #electric-power-consumption .axis-x .tick, #electric-power-consumption .axis-y .tick {
     display: none;
   }
   #electric-power-consumption .point:nth-of-type(5n), #electric-power-consumption .axis-x .tick:nth-of-type(5n), #electric-power-consumption .axis-y .tick:nth-of-type(2n) {
+    display: block;
+  }
+}
+@media (max-width: 25em) {
+  #electric-power-consumption .point, #electric-power-consumption .axis {
+    display: none;
+  }
+  #electric-power-consumption .point:first-of-type, #electric-power-consumption .point:last-of-type {
     display: block;
   }
 }
