#2 Replace Flexbox with Grid, Replace ems and px with rem in media queries, Continue Adapting Article

--- a/src/examples/article/market-shares.css
+++ b/src/examples/article/market-shares.css
@@ -10,7 +10,7 @@
     display: none;
   }
 }
-@media (max-width: 25em) {
+@media (max-width: 25rem) {
   #market-shares-chart .point, #market-shares-chart .axis {
     display: none;
   }
