--- a/src/examples/article/electric-power-consumption.css
+++ b/src/examples/article/electric-power-consumption.css
@@ -24,7 +24,7 @@
   justify-content: space-evenly;
 }
 
-@media (min-width: 25em) {
+@media (min-width: 25rem) {
   #electric-power-consumption .point, #electric-power-consumption .axis-x .tick, #electric-power-consumption .axis-y .tick {
     display: none;
   }
@@ -32,7 +32,7 @@
     display: block;
   }
 }
-@media (max-width: 25em) {
+@media (max-width: 25rem) {
   #electric-power-consumption .point, #electric-power-consumption .axis {
     display: none;
   }
