--- a/src/examples/article/electric-power-consumption.scss
+++ b/src/examples/article/electric-power-consumption.scss
@@ -30,7 +30,7 @@
   }
 }
 
-@media (min-width: 25em) {
+@media (min-width: 25rem) {
   #electric-power-consumption {
     .point, .axis-x .tick, .axis-y .tick {
       display: none;
@@ -41,7 +41,7 @@
   }
 }
 
-@media (max-width: 25em) {
+@media (max-width: 25rem) {
   #electric-power-consumption {
     .point, .axis {
       display: none;
