--- a/src/examples/article/styles.css
+++ b/src/examples/article/styles.css
@@ -18,21 +18,16 @@ h1 {
 }
 
 .grid-article {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 1400px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  max-width: 87.5rem;
   margin: 0 auto;
-}
-
-.col-1, .col-2, .col-3 {
-  width: 100%;
-  flex-grow: 1;
 }
 
 .article {
   padding: 1rem;
-  border-right: 1px solid #DADCE0;
-  border-bottom: 1px solid #DADCE0;
+  border-right: 0.063rem solid #DADCE0;
+  border-bottom: 0.063rem solid #DADCE0;
 }
 
 @media (min-width: 700px) {
