--- a/src/examples/article/market-shares/market-shares.scss
+++ b/src/examples/article/market-shares/market-shares.scss
@@ -1,5 +1,7 @@
 #market-shares-chart {
+  width: 100%;
   .chart {
+    width: 100%;
     grid-template: auto auto 1fr auto / auto 1fr auto;
     grid-template-areas: 'header  header  header' 'legend legend legend' 'axis-left draw-area draw-area' ' . axis-bottom . ';
   }
