--- a/src/examples/article/electric-power-comsumption/electric-power-consumption.scss
+++ b/src/examples/article/electric-power-comsumption/electric-power-consumption.scss
@@ -36,7 +36,7 @@
     .point, .axis-x .tick, .axis-y .tick {
       display: none;
     }
-    .point:nth-of-type(5n), .axis-x .tick:nth-of-type(5n), .axis-y .tick:nth-of-type(2n) {
+    .point:first-of-type, .point:last-of-type, .point:nth-of-type(5n), .axis-x .tick:nth-of-type(5n), .axis-y .tick:nth-of-type(2n) {
       display: block;
     }
   }
