--- a/src/examples/fullsize-examples/line/line.scss
+++ b/src/examples/fullsize-examples/line/line.scss
@@ -22,7 +22,7 @@ body {
 
 @media (max-width: 40rem) {
   .chart {
-    padding: 1rem 3rem 0rem 3rem;
+    padding: 1rem 3rem 0 3rem;
   }
 
   .chart .header .subtitle {
