--- a/src/examples/article/styles.css
+++ b/src/examples/article/styles.css
@@ -22,12 +22,13 @@ h1 {
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   max-width: 87.5rem;
   margin: 0 auto;
+  grid-gap: 0.063rem;
+  background: #DADCE0;
 }
 
 .article {
   padding: 1rem;
-  border-right: 0.063rem solid #DADCE0;
-  border-bottom: 0.063rem solid #DADCE0;
+  background: floralwhite;
 }
 
 @media (min-width: 43.75rem) {
