--- a/src/examples/article/styles.scss
+++ b/src/examples/article/styles.scss
@@ -23,12 +23,15 @@ h1 {
   grid-template-columns: repeat( auto-fit, minmax(25rem, 1fr));
   max-width: 87.5rem;
   margin: 0 auto;
+  grid-gap: 0.063rem;
+  background: #DADCE0;
 }
 
 .article {
   padding: 1rem;
-  border-right: 0.063rem solid #DADCE0;
-  border-bottom: 0.063rem solid #DADCE0;
+  background: floralwhite;
+  //border-right: 0.063rem solid #DADCE0;
+  //border-bottom: 0.063rem solid #DADCE0;
 }
 
 @media (min-width: 43.75rem) {
