Fix Scatter Plot cutting of Points

--- a/src/examples/fullsize-examples/scatter-categorical/scatter-categorical.scss
+++ b/src/examples/fullsize-examples/scatter-categorical/scatter-categorical.scss
@@ -2,6 +2,12 @@
   width: 100%;
   height: 75vh;
   min-height: 25rem;
+  //.draw-area {
+  //  //overflow: visible;
+  //  .series-point {
+  //    overflow: visible;
+  //  }
+  //}
 }
 
 body {
