--- a/src/examples/fullsize-examples/scatter-categorical/scatter-categorical.css
+++ b/src/examples/fullsize-examples/scatter-categorical/scatter-categorical.css
@@ -3,6 +3,12 @@
   height: 75vh;
   min-height: 25rem;
 }
+#chart .legend {
+  align-items: flex-start;
+}
+#chart .legend .title {
+  margin: 0;
+}
 
 body {
   background-color: floralwhite;
