--- a/src/examples/fullsize-examples/line-multi/line-multi.css
+++ b/src/examples/fullsize-examples/line-multi/line-multi.css
@@ -19,12 +19,23 @@ body {
 #chart .legend-item {
   margin-top: 1rem;
 }
+#chart .point, #chart .axis-x .tick {
+  display: none;
+}
 
-@media (max-width: 30rem) {
-  #chart .point, #chart .axis {
+@media (width < 30rem) {
+  #chart .point, #chart .axis-x .tick {
     display: none;
   }
   #chart .point:first-of-type, #chart .point:last-of-type {
+    display: block;
+  }
+  #chart .point:nth-of-type(4n), #chart .point:first-of-type, #chart .point:last-of-type, #chart .axis-x .tick:nth-of-type(4n) {
+    display: block;
+  }
+}
+@media (min-width: 30rem) {
+  #chart .point:nth-of-type(2n), #chart .point:first-of-type, #chart .point:last-of-type, #chart .axis-x .tick:nth-of-type(2n) {
     display: block;
   }
 }
@@ -42,21 +53,5 @@ body {
     flex-direction: row;
     width: 100%;
     justify-content: space-evenly;
-  }
-}
-@media (min-width: 30rem) and (max-width: 50rem) {
-  .point, .axis-x .tick {
-    display: none;
-  }
-  .point:nth-of-type(5n), .point:first-of-type, .point:last-of-type, .axis-x .tick:nth-of-type(5n) {
-    display: block;
-  }
-}
-@media (min-width: 50rem) {
-  .point, .axis-x .tick {
-    display: none;
-  }
-  .point:nth-of-type(2n), .point:first-of-type, .point:last-of-type, .axis-x .tick:nth-of-type(2n) {
-    display: block;
   }
 }
