--- a/src/examples/fullsize-examples/bars/grouped-bar/grouped-bar.css
+++ b/src/examples/fullsize-examples/bars/grouped-bar/grouped-bar.css
@@ -11,7 +11,7 @@ body {
   --color-categorical-2: #539322;
 }
 
-@media (max-width: 40rem) {
+@media (width < 45rem) {
   .chart {
     grid-template: "header header" "axis-left draw-area" 1fr ". axis-bottom" auto ". legend" auto/auto 1fr;
   }
