--- a/src/examples/fullsize-examples/lines/line/line.css
+++ b/src/examples/fullsize-examples/lines/line/line.css
@@ -43,6 +43,9 @@ body {
   .ticks .tick:nth-of-type(2n + 1) {
     display: block;
   }
+  .ticks .tick:nth-of-type(2n + 1), .ticks .tick:first-of-type, .ticks .tick:last-of-type {
+    display: block;
+  }
   .point {
     opacity: 1;
   }
