--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,8 @@
 @use './axes';
-@use "./legend";
 @use "./chart";
 @use "./data-styles";
 @use "./text";
 @use "./lines";
+@use "./vars";
+@use "./elements";
+
