--- a/src/scss/chart/legend.scss
+++ b/src/scss/chart/legend.scss
@@ -3,9 +3,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 0.8em;
   cursor: default;
   margin: 0.5rem;
+  .title {
+    font-size: var(--font-size-legend-title);
+    margin: 0 0.5em;
+  }
+  .items {
+    .legend-item {
+      .label {
+        font-size: var(--font-size-legend-label);
+      }
+    }
+  }
 }
 
 [data-legend-position='right'] .legend,
@@ -17,9 +27,7 @@
   justify-self: end;
 }
 
-.legend .title {
-  margin: 0 0.5em;
-}
+
 
 .legend .items {
   display: flex;
