--- a/src/scss/text.scss
+++ b/src/scss/text.scss
@@ -1,7 +1,4 @@
-.series-label {
-  font-size: 0.7em;
-  pointer-events: none;
-}
+
 
 .label.highlight, .legend-item.highlight {
   font-size: 1.2em;
@@ -52,16 +49,8 @@ text[data-orientation='vertical'] {
   dominant-baseline: hanging;
 }
 
-.title text,
-text.title {
-  font-size: 1.5em;
-  letter-spacing: 0.1em;
-}
 
-.title {
+
+.axis .title .text {
   grid-area: title;
-}
-
-.subtitle {
-  grid-area: subtitle;
 }
